# SO3

./: .gitignore  .gitmodules  README.md  _rename_batch.py  pyproject.toml  setup.py  test_cay.py
SO3.egg-info/: PKG-INFO  SOURCES.txt
so3/: Cayley.py  Euler.py  SE3.py  SO3Methods.py  __init__.py  _pycondec.py  _shapecheck.py  conversions.py  extend_euler.py  generators.py  matrices.py  quaternions.py  rotation_methods.py  se3_junction_methods.py  transforms.py
so3/transforms/: transform_SE3.py  transform_SO3.py  transform_algebra2group.py  transform_cayley2euler.py  transform_marginals.py  transform_midstep2triad.py  transform_statevec.py  transform_units.py
so3tools/: __init__.py
