[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SO3"
version = "0.0.1"
description = "A collection of methods for the rotation group SO(3) and SE(3)"
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [
    { name = "Enrico Skoruppa", email = "enrico.skoruppa@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
numba = ["numba"]

[project.urls]
Homepage = "https://github.com/eskoruppa/SO3"
Repository = "https://github.com/eskoruppa/SO3"

[tool.setuptools.packages.find]
where = ["."]

