[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so3tools"
version = "0.0.3"
description = "A collection of methods for the rotation group SO(3)"
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [
    { name = "Enrico Skoruppa", email = "esk.phys@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pycondec>=0.0.1",
]

[project.optional-dependencies]
# numba is optional: cond_jit transparently degrades to pure Python without it.
numba = ["numba"]

[project.urls]
Homepage = "https://github.com/eskoruppa/SO3"
Repository = "https://github.com/eskoruppa/SO3"

[tool.setuptools.packages.find]
include = ["so3*"]
exclude = ["so3.pyConDec*", "tests*", "build*"]

